# rkdeveloptool-gui

./: .gitignore  CONTRIBUTING.md  Makefile.am  README.md  Readme.txt  configure.ac  main.cpp
.github/workflows/: ci.yml  linux-release.yml  macos-release.yml  windows-release.yml
docs/: USER_GUIDE.md
gui/: .gitignore  README.md  package-lock.json  package.json
gui/config/: default.json
gui/scripts/: capture-doc-screenshots.js  stage-rkdeveloptool.js
gui/src/: commandDelay.js  devicePresence.js  index.html  lib.js  main.js  no-device-preload.js  no-device.html  preload.js  renderer.js  simulationRunner.js  styles.css  toolRunner.js  updateManager.js  windowFactory.js
gui/tests/: commandDelay.test.js  devicePresence.test.js  integration.test.js  layout.test.js  lib.test.js  simulation.test.js  updateManager.test.js  windowFactory.test.js
gui/tests/fixtures/: mock-rkdeveloptool.js
gui/tests/fixtures/configs/: current-invalid.json  current-valid.json  legacy-invalid.json  legacy-valid.json
tests/cpp/: unit_tests.cpp
